<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jslsolucoes</groupId>
	<artifactId>tagria</artifactId>
	<version>1.0.11-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<description>Action based component suit that integrates with spring mvn,vraptor,struts 2,servlet and any kind of action based mvn framework </description>
	<url>http://tagrialib.jslsolucoes.com</url>

	<developers>
		<developer>
			<id>jlemes</id>
			<name>Jonatan de Sá Lemes</name>
			<email>jonatan@jslsolucoes.com</email>
			<organization>JSL Solucoes LTDA</organization>
			<organizationUrl>http://jslsolucoes.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-3</timezone>
		</developer>
	</developers>

	<organization>
		<name>JSL Solucoes LTDA</name>
		<url>http://jslsolucoes.com</url>
	</organization>

	<licenses>
		<license>
			<distribution>repo</distribution>
			<name>Apache License, Version 2.0</name>
			<url>http://apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/jslsolucoes/tagria</url>
		<connection>scm:git:https://github.com/jslsolucoes/tagria</connection>
		<developerConnection>scm:git:https://github.com/jslsolucoes/tagria.git</developerConnection>
		<tag>v.1.0.9</tag>
	</scm>

	<modules>
		<module>tagria-lib</module>
		<module>tagria-doc</module>
		<module>tagria-example-core</module>
		<module>tagria-example-mentawai</module>
		<module>tagria-example-servlet</module>
		<module>tagria-example-spring</module>
		<module>tagria-example-struts</module>
		<module>tagria-example-vraptor</module>
		<module>tagria-distro</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.scm.id>github</project.scm.id>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.8.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

</project>